[package]
name = "reijou"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[example]]
name = "example1"
src = "examples/example1.rs"

[dependencies]
proc-macro2 = "1.0.40"
syn = { version = "1.0.98", features = ["full"] }
quote = "1.0.20"

[dev-dependencies]
pretty_assertions = "1.2.1"
